* Fixed variable typo in commandline.py that was causing build fails.
* Merged in lp:~duplicity-team/duplicity/po-updates
* Remove 'gs' and 's3+http' from uses_netloc[].  Fixes Bug 1411803.
* Misc fixes for the following PEP8 issues:
  - E111, E121, E122, E124, E125, E126
  - see http://pep8.readthedocs.org
* Misc fixes for the following PEP8 issues:
  - E127, E128, 201, 202, 203
  - see http://pep8.readthedocs.org
* Fixed bug # 1414418
  - Aligned commandline.py options and help display contents.
  - Aligned commandline.py options and manpage contents.
* Changed --s3_multipart_max_timeout to --s3-multipart-max-timeout to be
  consistent with commandline option naming conventions.
* Applied patch from Adam Reichold to fix bug # 1413792.
* Ongoing pep8 corrections.
* Merged in lp:~angusgr/duplicity/exclude-older-than
  - Add "--exclude-older-than" commandline option, that allows you to only
    back up files with a modification date newer than a particular threshold.
* Merged in lp:~aaron-whitehouse/duplicity/bug_884371_asterisks_in_includes
  - Added tests to unit/test_selection.py and funtional/test_selection.py
    to show the behaviour reported in Bug #884371, i.e. that selection is
    incorrect when there is a * or ** on an include line of a filelist or
    commandline --include.
* Merged in lp:~aaron-whitehouse/duplicity/bug_932482_trailing_slashes_and_wildcards_error
  - Added functional and unit tests to show Bug #932482 - that selection does
    not work correctly when excludes (in a filelist or in a commandline option)
    contain both a single or double asterisk and a trailing slash.


New in v0.7.01 (2015/01/11)
---------------------------
Enhancements:
* Undid move of testing/test_code.py.  Instead I fixed it
  so that it would not run during PPA build.  It now needs
  the setting RUN_CODE_TESTS=1 in the environment which is
  supplied in the tox.ini file.
* Moved testing/test_code.py to testing/manual/code_test.py