@@ -316,7 +316,7 @@ class OneDriveBackend(duplicity.backend.Backend):
     def _query(self, remote_filename):
         file_id = self.get_file_id(remote_filename)
         if file_id is None:
-            return {'size':-1}
+            return {'size': -1}
         response = self.http_client.get(self.API_URI + file_id)
         response.raise_for_status()
         if 'size' not in response.json():
