@@ -70,7 +70,7 @@ class SwiftBackend(duplicity.backend.Backend):
         if 'SWIFT_TENANTNAME' in os.environ:
             conn_kwargs['tenant_name'] = os.environ['SWIFT_TENANTNAME']
         if 'SWIFT_REGIONNAME' in os.environ:
-            conn_kwargs['os_options'] = {'region_name':os.environ['SWIFT_REGIONNAME']}
+            conn_kwargs['os_options'] = {'region_name': os.environ['SWIFT_REGIONNAME']}
 
         self.container = parsed_url.path.lstrip('/')
 
