@@ -240,8 +240,10 @@ def fh_cmp(f1, f2, bufsize=8192):
     while 1:
         b1 = f1.read(bufsize)
         b2 = f2.read(bufsize)
-        if b1 != b2: return 0
-        if not b1:   return 1
+        if b1 != b2:
+            return 0
+        if not b1:
+            return 1
 
 ########################################################################
 
